peac_dev/force-app/main/default/objects/OnBase_Attachment__c/OnBase_Attachment__c.object-meta.xml
<CustomObject>
    <label>OnBase Attachment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnBase Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>