peac_dev/force-app/main/default/objects/OnBase_Attachment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IF Notes &amp; Attachments</relationshipLabel>
    <relationshipName>Account_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>