peac_dev/force-app/main/default/objects/OnBase_Attachment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>