peac_dev/force-app/main/default/objects/OnBase_Attachment__c/fields/Sent_To_OnBase__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_OnBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To OnBase</label>
    <type>Checkbox</type>
</CustomField>