peac_dev/force-app/main/default/objects/OnBase_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS - Master Lease</fullName>
            </value>
            <value>
                <fullName>IF-Internal</fullName>
            </value>
            <value>
                <fullName>IF-External</fullName>
            </value>
            <value>
                <fullName>IF-ACH/Auto Debit Forms &amp; Copy Of Check</fullName>
            </value>
            <value>
                <fullName>IF-Misc</fullName>
            </value>
            <value>
                <fullName>IF-Credit Bureaus</fullName>
            </value>
            <value>
                <fullName>IF-Credit Application</fullName>
            </value>
            <value>
                <fullName>IF-Proof Of Insurance</fullName>
            </value>
            <value>
                <fullName>IF-Additional Stipulations</fullName>
            </value>
            <value>
                <fullName>IF-Bank Account Change Reques</fullName>
                <label>IF-Bank Account Change Request</label>
            </value>
            <value>
                <fullName>IF-Bank Statements</fullName>
            </value>
            <value>
                <fullName>IF-Booking Sheet</fullName>
            </value>
            <value>
                <fullName>IF-Financial Statements</fullName>
            </value>
            <value>
                <fullName>IF-Email Credit/Sales/Booking</fullName>
            </value>
            <value>
                <fullName>IF-Invoice</fullName>
            </value>
            <value>
                <fullName>IF-UCC Filed Copy</fullName>
            </value>
            <value>
                <fullName>IF-Guarantor- Corp or PG</fullName>
            </value>
            <value>
                <fullName>IF-Purchase Order</fullName>
            </value>
            <value>
                <fullName>IF-MSRP-Equipment Details</fullName>
            </value>
            <value>
                <fullName>IF-SOS/License Verification</fullName>
            </value>
            <value>
                <fullName>IF-Tax Returns</fullName>
            </value>
            <value>
                <fullName>IF-Addendum- Terms</fullName>
            </value>
            <value>
                <fullName>IF-Addendum Location</fullName>
            </value>
            <value>
                <fullName>IF-Master Inventory Finance Agreement</fullName>
            </value>
            <value>
                <fullName>IF-Takedown Inventory Finance Agreement</fullName>
            </value>
            <value>
                <fullName>IF-Certificate Of Authentication</fullName>
            </value>
            <value>
                <fullName>IF-Customer Correspondence</fullName>
            </value>
            <value>
                <fullName>IF-Inventory Finance Scorecard</fullName>
            </value>
            <value>
                <fullName>IF-Reg B Letter</fullName>
            </value>
            <value>
                <fullName>IF-Booking Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>