peac_dev/force-app/main/default/objects/OnBase_Attachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <description>OLD VERSION: IF(Document_URL__c = null, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment__c, &quot;View&quot;), null)</description>
    <formula>HYPERLINK(IF(Document_URL__c = null, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Attachment__c, Document_URL__c), &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Document</label>
    <type>Text</type>
</CustomField>