peac_dev/force-app/main/default/objects/OnBase_Attachment__c/validationRules/OB_01_DealerAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>OB_01_DealerAccount</fullName>
    <active>true</active>
    <description>prevents a record without an IF document type to be added when the Related Account is a dealer account</description>
    <errorConditionFormula>AND(
     CONTAINS(Account__r.RecordType.DeveloperName, &quot;Dealer&quot; ),
     NOT(CONTAINS(TEXT(Type__c),&quot;IF-&quot;))
)</errorConditionFormula>
    <errorMessage>Cannot add a record without an IF document type when Related Account is a dealer account- OB_01</errorMessage>
</ValidationRule>