peac_dev/force-app/main/default/objects/OnBase_Attachment__c/validationRules/OB_02_EndUserAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>OB_02_EndUserAccount</fullName>
    <active>true</active>
    <description>prevents a record from being added with a document type other than “CS - Master Lease” to a record when the related Account is an End User account</description>
    <errorConditionFormula>AND(
    CONTAINS(Account__r.RecordType.DeveloperName, &quot;End_User&quot; ),
    NOT(ISPICKVAL(Type__c,&quot;CS - Master Lease&quot;))
)</errorConditionFormula>
    <errorMessage>Cannot add a document type other than “CS - Master Lease” to a record when the related Account is an End User account.-OB_02</errorMessage>
</ValidationRule>